--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
                             <p>Loading...</p>
                         </div>
                         <div id="imgTest"></div>
+                        <br>
+                        <br>
+                        <button type="button" class="btn btn-primary" onClick="window.location.reload();">Try another!</button>
+
                     </div>
                 </div>
             </div>
